--- a/css/main.css
+++ b/css/main.css
@@ -158,21 +158,40 @@ footer span {
 @media all and (min-width: 768px) {
 	/*tablet styles*/
 	.bottom-section {
-
+		justify-content: space-between;
+        align-items: flex-start;
+        border-top: 1px solid #eee;
 	}
-	.section-one {
+	.section-one,
+    .section-two,
+    .section-three {
+        border-top: none;
+        flex-basis: 30%;
+    }
 
-	}
-	.section-two {
-
-	}
-	.section-three {
-
-	}
+    .section-two {
+        border-left: 1px solid #eee;
+        border-right: 1px solid #eee;
+        padding: 0 20px;
+    }
 }
 
 @media all and (min-width: 1200px) {
 	/*desktop styles*/
+	header {
+        justify-content: space-between;
+    }
+
+    header h1 {
+        width: 30%;
+        padding: 0;
+        border-bottom: none;
+        text-align: left;
+    }
+
+    header nav {
+        width: 40%;
+    }
 
 	header nav ul {
     display: flex;
